--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">QR Code Scanner</string>
-    <string name="instruction_text">Наведите камеру на QR код</string>
+    <string name="instruction_text">Наведите камеру\nна QR код</string>
+    <string name="cancel">Отмена</string>
+    <string name="photo">ФОТО</string>
 </resources>
